2004-07-17  Ray Strode  <rstrode@redhat.com>

	Fix compile warnings and look at NotShowIn and
	OnlyShowIn when building association lists.

	* libgnomevfs/egg*.[ch]: sync up from libegg
	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	(gnome_vfs_mime_info_cache_dir_reload_*):
	Don't ignore errors
	(gnome_vfs_mime_info_cache_dir_desktop_entry_is_valid):
	new function to check for OnlyShowIn and NotShowIn
	(gnome_vfs_mime_info_cache_dir_merge_mime): use
	new is_valid function

2004-07-17  Ray Strode  <rstrode@redhat.com>

	Search in $XDG_CONFIG_DIRS for default.list, too

	* libgnomevfs/gnome-vfs-mime-info-cache.c: 
	(gnome_vfs_mime_info_cache_get_defaults_search_path):
	new function.
	(gnome_vfs_mime_info_cache_reload):
	flush cache from memory before reloading.  Load 
	additional default.list files.
	(gnome_vfs_mime_info_cache_free): clean up better
	(gnome_vfs_mime_get_all_desktop_entries): fix bug
	where list was getting built wrong.

	* test/gnome-vfs-mime-info-cache.c: file for testing
	functions

Sat Jul 17 22:55:33 2004  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_set_description), (gnome_vfs_mime_set_icon),
	(gnome_vfs_mime_set_can_be_executable),
	(gnome_vfs_mime_get_short_list_applications),
	(gnome_vfs_mime_get_short_list_components),
	(gnome_vfs_mime_get_all_components),
	(gnome_vfs_mime_set_default_action_type),
	(gnome_vfs_mime_set_default_application),
	(gnome_vfs_mime_set_default_component),
	(gnome_vfs_mime_set_short_list_applications),
	(gnome_vfs_mime_set_short_list_components),
	(gnome_vfs_mime_add_application_to_short_list),
	(gnome_vfs_mime_remove_application_from_list),
	(gnome_vfs_mime_remove_application_from_short_list),
	(gnome_vfs_mime_add_component_to_short_list),
	(gnome_vfs_mime_remove_component_from_short_list),
	(gnome_vfs_mime_add_extension), (gnome_vfs_mime_remove_extension),
	(gnome_vfs_mime_extend_all_applications),
	(gnome_vfs_mime_remove_from_all_applications), (copy_str_list):